--- a/assets/css/templates.css
+++ b/assets/css/templates.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Verdana, sans-serif;
 }
 header {
     display: flex;
@@ -11,9 +12,232 @@ header {
     display: flex;
     justify-content: space-between;
     width: 990px;
-    background-color: gray;
 }
 .logo {
     display: flex;
     align-items: center;
+}
+.menu {
+    display: flex;
+    align-items: center;
+}
+nav ul,nav li{
+    list-style: none;
+}
+nav ul {
+    display: flex;
+}
+nav a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #727272;
+}
+nav .active a, nav a:hover {
+    background-color: #503ef1;
+    color: #ffffff;
+}
+#banner {
+    background-image: url(../images/fuji2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 670px;
+    display: flex;
+    justify-content: center;
+}
+.column {
+    flex-direction: column;
+}
+.banner_headline {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.banner_headline h1 {
+    color: #ffffff;
+    font-size: 70px;
+    text-shadow: 0 1px 0 #000000;
+    max-width: 350px;
+    padding: 0;
+    margin: 0;
+}
+.banner_headline h2 {
+    color: #ffffff;
+    font-size: 21px;
+    text-shadow: 0 1px 0 #000000;
+    max-width: 350px;
+    padding: 0;
+    margin: 0;
+    margin-top: 30px;
+}
+.banner_options {
+    height: 210px;
+    display: flex;
+}
+.banner1, .banner2, .banner3 {
+    flex: 1;
+    padding: 20px;
+}
+.banner1 {
+    background-color: #9e94eb;
+}
+.banner2 {
+    background-color: #7062ee;
+}
+.banner3 {
+    background-color: #503EF1;
+}
+.banner-title {
+    color: #ffffff;
+    font-size: 21px;
+}
+.banner-description {
+    color: #ffffff;
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.banner_options a {
+    display: inline-block;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 5px;
+    font-size: 12px;
+    text-decoration: none;
+}
+.banner_options a:hover {
+    background-color: #503EF1;
+}
+.open-time {
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ffffff;
+}
+#geral {
+    display: flex;
+    justify-content: center;
+}
+#geral section {
+    flex: 2;
+}
+#geral aside {
+    flex: 1;
+}
+.widget_title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.widget_title_text {
+    color: #000000;
+    font-size: 21px;
+    font-weight: bold;
+}
+.widget_title_bar {
+    width: 50px;
+    height: 3px;
+    margin-top: 10px;
+    background-color: #503EF1;
+}
+.widget_body_square {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+.widget_body_square a {
+    text-decoration: none;
+    cursor: pointer;
+}
+.widget_body_square a h4 {
+    color: #ffffff;    
+    font-size: 17px;
+    text-align: center;
+    margin-top: 60px;
+}
+.widget_square {
+    width: 150px;
+    height: 150px;
+    background-color: #7062EE;
+    margin-top: 20px;
+}
+.widget_square:hover {
+    background-color: #503EF1;
+}
+.widget_appointment {
+    color: #5c5c5c;
+    margin-top: 10px;
+}
+.widget_separation_bar {
+    width: 330px;
+    height: 3px;
+    margin-top: 15px;
+    background-color: #9e94eb;
+}
+.contact {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+.contact strong {
+    margin: 0 10px 0 10px;
+}
+.contact_img {
+    padding: 0 10px 0 10px;
+}
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+article {
+    flex: 1;
+    min-width: 300px;
+    margin-right: 20px;
+}
+article a {
+    text-decoration: none;
+}
+article .news_data {
+    display: flex;
+    flex-wrap: wrap;
+}
+article .news_posted_at {
+    color: #ffffff;
+    background-color: #3023a8;
+    font-size: 12px;
+    padding: 10px;
+}
+article .news_comments {
+    color: #ffffff;
+    background-color: #9e94eb;
+    font-size: 12px;
+    padding: 10px;
+    margin-left: 2px;
+}
+article .news_thumbnail {
+    margin-top: 30px;
+}
+article .news_thumbnail img {
+    width: 100%;
+    height: auto;
+}
+article .news_title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: #000000;
+    font-size: 23px;
+}
+article .news_resume {
+    color: #5c5c5c;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 30px;
 }
