--- a/assets/css/templates.css
+++ b/assets/css/templates.css
@@ -241,3 +241,158 @@ article .news_resume {
     line-height: 20px;
     margin-bottom: 30px;
 }
+footer {
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+}
+.footer_menu {
+    display: flex;
+}
+.fm_1, .fm_2, .fm_3 {
+    flex: 1;
+    color: #ffffff;
+    padding: 20px;
+}
+.fm_1 {
+    background-color: #9e94eb;
+}
+.fm_2 {
+    background-color: #7062ee;
+}
+.fm_3 {
+    background-color: #503EF1;
+}
+.fm_1 a, .fm_2 a, .fm_3 a  {
+    text-decoration: none;
+}
+.footer_area {
+    display: flex;
+}
+.footer_areaitem {
+    flex: 1;
+    color: #ffffff;
+}
+.flexColumn {
+    flex-direction: column;
+}
+footer .widget_title_text {
+    color: #ffffff;
+}
+.footer_copy {
+    border-top: 1px solid #6e6e6e;
+    height: 40px;
+    line-height: 40px;
+    color: #6e6e6e;
+    font-size: 12px;
+    margin-top: 30px;
+}
+footer .footer_description {
+    color: #6e6e6e;
+}
+.footer_end {
+    margin-top: 25px;
+    margin-right: 30px;
+}
+.adress {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    color: #6e6e6e;
+    line-height: 20px;
+}
+.adress_email {
+    color: #ffffff;
+}
+.footer_midia {
+    margin-top: 20px;
+}
+.midia {
+    margin-right: 5px;
+    cursor: pointer;
+}
+.posts {
+    margin-top: 20px;
+    font-size: 12px;
+}
+.posts_date {
+    margin-top: 5px;
+    color: #9e94eb;
+}
+.tweets {
+    margin-top: 20px;
+    color: #6e6e6e;
+    font-size: 12px;
+}
+.tweets_link {
+    color: #ffffff;
+}
+.menuMobile {
+    display: none;
+    height: 40px;
+    width: 40px;
+    margin: 40px 20px 40px 0;
+}
+.mm_line {
+    height: 2px;
+    background-color: #503EF1;
+}
+
+@media (max-width:600px) {
+    
+    .logo {
+        padding-left: 25px;
+    }
+    header .container {
+        flex-direction: row;
+    }
+    header {
+        height: auto;
+    }
+    .menuMobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        cursor: pointer;
+    }
+    nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: #ffffff;
+    }
+    .banner_headline {
+        padding: 20px;
+    }
+    .banner_headline h1 {
+        font-size: 55px;
+    }
+    .banner_headline h2 {
+        font-size: 17px;
+    }
+    .banner_options {
+        height: auto;
+        flex-direction: column;
+    }
+    .container {
+        flex-direction: column;
+    }
+    #geral {
+        margin-top: 70px;
+    }
+    #geral section, #geral aside {
+        padding: 20px;
+    }
+    .footer_menu{
+        flex-direction: column;
+    }
+    .footer_area {
+        flex-direction: column;
+        padding: 20px;
+    }
+    .footer_copy {
+        padding-left: 20px;
+    }
+}
